--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tauri-editor",
+  "name": "tauri-mindless-typer",
   "version": "0.0.0",
   "description": "",
   "scripts": {
@@ -11,14 +11,18 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@tauri-apps/cli": "^1.2.2",
     "@types/node": "^18.7.10",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.7.4",
     "vite": "^4.0.0",
-    "vite-plugin-solid": "^2.3.0",
-    "@tauri-apps/cli": "^1.2.2"
+    "vite-plugin-solid": "^2.3.0"
   },
   "dependencies": {
-    "solid-js": "^1.4.7",
-    "@tauri-apps/api": "^1.2.0"
+    "@tauri-apps/api": "^1.2.0",
+    "daisyui": "^2.49.0",
+    "solid-js": "^1.4.7"
   }
 }
